--- a/Blazr.Grid/Blazr.Grid.csproj
+++ b/Blazr.Grid/Blazr.Grid.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Blazr.Components\Blazr.Components.csproj" />
+    <ProjectReference Include="..\Blazr.BaseComponents\Blazr.BaseComponents.csproj" />
   </ItemGroup>
 
 </Project>
